# shadowgrounds

./: .gitignore  .uncrustify  CMakeLists.txt  LICENSE.txt  README  README.md  Shadowgrounds.xpm  gencombine.sh  module.mk  sg.dox
Launcher/: LauncherWindow.pm  SGConfig.pm  SGOptions.pm  advanced_dialog.cpp  advanced_dialog.h  application.cpp  dialog_data.cpp  dlghandlerimpl.h  install.sh  launch_dialog.cpp  launcher.pl  launcher_main.cpp  launcher_window.cpp  launcher_window.h  options_value.h  options_value_manager.cpp  options_value_manager.h  window.cpp  window.h
Launcher2/: GraphicsDialogHandler.cpp  GraphicsDialogHandler.h  LaunchDialogHandler.cpp  LaunchDialogHandler.h  Launcher2.aps  Launcher2.rc  Launcher2.vcproj  LauncherMainDialog.cpp  LauncherMainDialog.h  LauncherMainWindow.cpp  LauncherWindow.cpp  LauncherWindow.glade  LauncherWindow.h  LauncherWindow.pm  ModDialogHandler.cpp  ModDialogHandler.h  PhysicsDialogHandler.cpp  PhysicsDialogHandler.h  SGConfig.pm  SGOptions.pm  SoundsDialogHandler.h  SoundsDialoghandler.cpp  UpdateDialogHandler.cpp  UpdateDialogHandler.h  application.cpp  application.h  dialog_data.cpp  dialog_data.h  dlghandlerimpl.cpp  dlghandlerimpl.h  idlghandler.h  install.sh  launcher.pl  launcher_main.cpp  options_value.cpp  options_value.h  options_value_list.cpp  options_value_list.h  options_value_manager.cpp  resource.h  (+2 more)
LauncherClaw/: advanced_dialog.cpp  application.h  dialog_data.cpp  dialog_data.h  dlghandlerimpl.cpp  idlghandler.h  launch_dialog.cpp  launch_dialog.h  launcher_main.cpp  launcher_window.cpp  options_value_list.cpp  options_value_manager.h  window.cpp
binaries/: .gitignore  Makefile  example.mk
cmake/: FindGLEW.cmake
container/: EmptyIteratorException.h  EmptyLinkedListException.h  LinkedList.cpp  LinkedList.h  Stack.cpp  Stack.h  StackEmptyException.h  module.mk
convert/: int64_to_hex.cpp  int64_to_hex.h  module.mk  str2int.cpp  str2int.h
editor/: FindFileWrapper.h  UniqueEditorObjectHandle.h  UniqueEditorObjectHandleManager.cpp  UniqueEditorObjectHandleManager.h  align_units.cpp  align_units.h  application.cpp  application.h  building_mode.cpp  building_mode.h  camera.cpp  camera.h  collision_model.cpp  collision_model.h  color_component.cpp  color_component.h  color_picker.cpp  color_picker.h  command_list.cpp  command_list.h  common_dialog.cpp  common_dialog.h  decorator_mode.cpp  decorator_mode.h  dialog.cpp  dialog.h  dialog_utils.cpp  dialog_utils.h  editor_main.cpp  editor_object_state.cpp  editor_object_state.h  editor_state.cpp  editor_state.h  explosion_scripts.cpp  explosion_scripts.h  export_dialog.cpp  export_dialog.h  export_options.h  exporter.cpp  exporter.h  (+110 more)
filesystem/: convert_type.h  empty_buffer.h  file_list.cpp  file_list.h  file_package_manager.cpp  file_package_manager.h  ifile_list.h  ifile_package.h  input_compressed_file_stream.cpp  input_compressed_file_stream.h  input_file_stream.cpp  input_file_stream.h  input_stream.cpp  input_stream.h  input_stream_wrapper.cpp  input_stream_wrapper.h  memory_stream.cpp  memory_stream.h  module.mk  output_compressed_file_stream.cpp  output_compressed_file_stream.h  output_file_stream.cpp  output_file_stream.h  output_stream.cpp  output_stream.h  rle_packed_file_wrapper.cpp  rle_packed_file_wrapper.h  standard_package.cpp  standard_package.h  zip_package.cpp  zip_package.h
game/: AIDirectControlActions.h  AlienSpawner.cpp  AlienSpawner.h  AmmoPack.cpp  AmmoPack.h  AmmoPackObject.cpp  AmmoPackObject.h  Ani.cpp  Ani.h  AniManager.cpp  AniManager.h  AniRecorder.cpp  AniRecorder.h  AniTool.cpp  AniTool.h  Arm.cpp  Arm.h  ArmorUnit.cpp  ArmorUnit.h  ArmorUnitActor.cpp  ArmorUnitActor.h  ArmorUnitType.cpp  ArmorUnitType.h  BlockedHeightAreaFillMapper.cpp  BlockedHeightAreaFillMapper.h  BonusManager.cpp  BonusManager.h  Building.cpp  Building.h  BuildingAdder.cpp  BuildingAdder.h  BuildingList.cpp  BuildingList.h  Bullet.cpp  Bullet.h  BurningMap.cpp  BurningMap.h  Character.cpp  Character.h  CheckpointChecker.cpp  (+248 more)
icons/: shadowgrounds.desktop  survivor.desktop  survivor.xpm
igios/: igios.cpp  module.mk
launcher_mac/: Launcher.h  Launcher.mm  LauncherParser.cpp  LauncherParser.h  launcher.xib
launcher_mac2/: Launcher.mm  LauncherParser.cpp  LauncherParser.h  launcher.xib  main.m
mingw/: Makefile  example.mk
net/: INetBind.h  INetConnection.h  INetDriver.h  NetDriverException.h  NetDriverManager.cc  NetDriverManager.h  netflags.h
ogui/: IOguiButtonListener.h  IOguiDriver.h  IOguiEffectListener.h  IOguiFont.h  IOguiFormattedCommand.h  IOguiImage.h  IOguiSelectListListener.h  IOguiSliderListener.h  Ogui.cpp  Ogui.h  OguiAligner.cpp  OguiAligner.h  OguiButton.cpp  OguiButton.h  OguiButtonEvent.cpp  OguiButtonEvent.h  OguiButtonStyle.cpp  OguiButtonStyle.h  OguiCheckBox.cpp  OguiCheckBox.h  OguiEffectEvent.cpp  OguiEffectEvent.h  OguiException.cpp  OguiException.h  OguiFormattedCommandImg.cpp  OguiFormattedCommandImg.h  OguiFormattedCommandImpl.cpp  OguiFormattedCommandImpl.h  OguiFormattedText.cpp  OguiFormattedText.h  OguiLocaleWrapper.cpp  OguiLocaleWrapper.h  OguiSelectList.cpp  OguiSelectList.h  OguiSelectListEvent.cpp  OguiSelectListEvent.h  OguiSelectListStyle.cpp  OguiSelectListStyle.h  OguiSlider.cpp  OguiSlider.h  (+12 more)
particle_editor/: cloudparticlesystem.cpp  cloudparticlesystem.h  dragparticleforce.cpp  dragparticleforce.h  effect.txt  floattrack.cpp  main.cpp  paramblock.cpp  paramblock.h  parser2.cpp  parseutil.cpp  parseutil.h  particle.h  particle_editor.dsp  particle_editor.dsw  particleeffect.cpp  particleeffect.h  particlegravity.cpp  particlegravity.h  particlesystem.cpp  particlesystem.h  particlesystemmanager.cpp  particlesystemmanager.h  particletiming.h  pointarrayparticlesystem.cpp  pointarrayparticlesystem.h  sprayparticlesystem.cpp  sprayparticlesystem.h  track.h  vectortrack.cpp
particle_editor2/: ParticlePhysics.cpp  ParticlePhysics.h  application.cpp  application.h  cloudparticlesystem.cpp  cloudparticlesystem.h  crappyfont.cpp  crappyfont.h  floattrack.cpp  iparticlearea.h  iparticlecollision.h  main.cpp  module.mk  (+31 more)
(+1289 files in other folders)
